...
                                    <constraint firstAttribute="width" constant="150" id="Ifm-jt-qdF"/>
                                    <constraint firstAttribute="height" constant="40" id="M3d-Dc-0Fs"/>
                                    <constraint firstAttribute="width" constant="150" id="cNJ-QM-6uK"/>
                                    <constraint firstAttribute="height" constant="40" id="jGB-in-f0P"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="tinted" title="Profile" buttonSize="medium"/>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="Ifm-jt-qdF"/>
                                        <exclude reference="M3d-Dc-0Fs"/>
                                        <exclude reference="cNJ-QM-6uK"/>
                                        <exclude reference="jGB-in-f0P"/>
...
