...
                                    <constraint firstAttribute="height" constant="200" id="RTM-XW-R4c"/>
                                </constraints>
                            </imageView>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter a username" textAlignment="center" minimumFontSize="12" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="Dug-gZ-XQJ">
                                <rect key="frame" x="35" y="412" width="344" height="50"/>
                                <color key="backgroundColor" systemColor="tertiarySystemBackgroundColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="enterUserTextField"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="tl1-lL-DEv"/>
                                </constraints>
                                <fontDescription key="fontDescription" style="UICTFontTextStyleTitle2"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" returnKeyType="go"/>
                                <userDefinedRuntimeAttributes>
...
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="cQW-Q3-faN"/>
                                </connections>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dam-u3-HHj">
                                <rect key="frame" x="50" y="512" width="314" height="50"/>
                                <color key="backgroundColor" systemColor="systemGreenColor"/>
                                <accessibility key="accessibilityConfiguration" identifier="getFollowersButton"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="50" id="lyJ-fR-dlT"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="tinted" title="Get Followers">
...
